<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_custom"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/signUpTextArea"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="96dp"
        android:background="@color/dark_custom"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/mainSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.60"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space">

        <EditText
            android:id="@+id/signup_edit_pwd2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:shadowColor="@color/dark_custom"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:textColor="#FFFBFB"
            android:textColorHint="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_edit_pwd1" />

        <TextView
            android:id="@+id/signup_uname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/username"
            android:textColor="@color/cyan"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/signup_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/email"
            android:textColor="@color/cyan"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_edit_uname" />

        <TextView
            android:id="@+id/signup_pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/password"
            android:textColor="@color/cyan"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_edit_email" />

        <EditText
            android:id="@+id/signup_edit_uname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/username_here"
            android:inputType="textPersonName"
            android:shadowColor="@color/dark_custom"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_uname" />

        <EditText
            android:id="@+id/signup_edit_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/email_here"
            android:inputType="textEmailAddress"
            android:shadowColor="@color/dark_custom"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_email" />

        <EditText
            android:id="@+id/signup_edit_pwd1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/password_here"
            android:inputType="textPassword"
            android:shadowColor="@color/dark_custom"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:textColor="#FFFFFF"
            android:textColorHint="#F6F5F5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_pwd" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/logInTextArea"
        android:layout_width="396dp"
        android:layout_height="454dp"
        android:layout_marginBottom="96dp"
        android:background="@color/dark_custom"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/mainSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.50"
        app:layout_constraintWidth_percent="0.80"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/main_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif"
            android:text="Email:"
            android:textColor="@color/cyan"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/main_pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/password"
            android:textColor="@color/cyan"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_edit_email" />

        <EditText
            android:id="@+id/main_edit_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="Email here"
            android:inputType="textPersonName"
            android:shadowColor="@color/dark_custom"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:textColor="#D8CDCD"
            android:textColorHint="#D8CDCD"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.437"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_email" />

        <EditText
            android:id="@+id/main_edit_pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/password_here"
            android:inputType="textPassword"
            android:shadowColor="@color/dark_custom"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:textColor="#D8CDCD"
            android:textColorHint="#D8CDCD"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_pwd" />

        <TextView
            android:id="@+id/forgotPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="108dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/forgot_password"
            android:textColor="#D8CDCD"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/remMe"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent" />

        <CheckBox
            android:id="@+id/remMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="92dp"
            android:checked="true"
            android:text="Remember me"
            android:textColor="@color/cyan"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/forgotPwd" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/mainSubmit"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/submit"
        android:textColor="@color/dark_custom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.075"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />



    <Button
        android:id="@+id/logBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:text="Log In"
        android:textColor="@color/dark_custom"
        app:layout_constraintEnd_toStartOf="@+id/space"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/signBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:text="Sign Up"
        android:textColor="@color/dark_custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/space"
        app:layout_constraintTop_toTopOf="parent" />

    <Space
        android:id="@+id/space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>