<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_custom">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/background2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.005" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.20"
        app:layout_constraintWidth_percent="0.5"
        android:layout_marginTop="132dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/jotaro"
        app:civ_border_color="@color/cyan_custom"
        app:civ_border_width="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="14dp"
        android:padding="5dp"
        android:src="@drawable/ic_email"
        app:layout_constraintBottom_toTopOf="@+id/textView14"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.15"
        app:tint="@color/cyan_custom" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="14dp"
        android:padding="7dp"
        android:shadowColor="@color/black_custom"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:text="   UID:"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/cyan_custom"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.20" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="14dp"
        android:padding="5dp"
        android:src="@drawable/ic_notifsetting"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.15"
        app:tint="@color/cyan_custom" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"

        android:layout_marginBottom="131dp"
        android:src="@drawable/ic_seppuku"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.15"
        app:tint="@color/cyan_custom" />


    <TextView
        android:id="@+id/profile2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="14dp"
        android:clickable="true"
        android:focusable="true"
        android:padding="7dp"
        android:shadowColor="@color/black_custom"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:text="Email:"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/cyan_custom"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/profile4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintWidth_percent="0.65" />

    <TextView
        android:id="@+id/profile4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="14dp"
        android:clickable="true"
        android:focusable="true"
        android:padding="10dp"
        android:shadowColor="@color/black_custom"
        android:shadowDx="3"
        android:shadowDy="3"
        android:text="50HiVgsdb234u7a1239123sBsfw12"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/cyan_custom"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/profile3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintWidth_percent="0.75" />

    <TextView
        android:id="@+id/profile3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="17dp"
        android:layout_marginBottom="15dp"
        android:clickable="true"
        android:focusable="true"
        android:padding="7dp"
        android:shadowColor="@color/black_custom"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:text="@string/notification_setting"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/cyan_custom"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/profile5"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintWidth_percent="0.75" />

    <TextView
        android:id="@+id/profile5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="17dp"
        android:layout_marginBottom="7dp"
        android:clickable="true"
        android:focusable="true"
        android:padding="7dp"
        android:shadowColor="@color/dark_custom"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:text="@string/seppuku_counter"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/cyan_custom"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/profileCounter"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintWidth_percent="0.75" />


    <TextView
        android:id="@+id/profileCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="79dp"
        android:clickable="true"
        android:focusable="true"
        android:padding="7dp"
        android:shadowColor="@color/black_custom"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:text="0"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/cyan_custom"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/speak"
        app:layout_constraintHorizontal_bias="0.008"
        app:layout_constraintStart_toEndOf="@+id/imageView3" />

    <TextView
        android:id="@+id/profile_uname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:padding="7dp"
        android:shadowColor="@color/black_custom"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:text="@string/username"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/cyan_custom"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image" />


    <ImageView
        android:id="@+id/speak"
        android:layout_width="75dp"
        android:layout_height="54dp"
        android:layout_marginBottom="68dp"
        android:src="@drawable/ic_help"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>